--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -284,6 +284,7 @@
                 width: 20%;
                 height: 320px;
                 display: inline-block;
+                align-items: baseline;
                 
 
                 span{
@@ -307,13 +308,13 @@
 
                     &:nth-child(1){
                         // position: fixed;
-                        filter: grayscale(70%);
+                        filter: grayscale(70%) opacity(0.7);
                         // backdrop-filter: blur(20px);
                         transform: translate(0px, 10%);
                         // transition: all .2s ease-in-out;
 
                         &:hover{
-                            filter: grayscale(0%);
+                            filter: grayscale(0%) opacity(1);
                             // transform: translate(0px, 0%) rotate(0deg);
                             transition: all .2s ease-in-out;
                         }
@@ -321,35 +322,35 @@
                     &:nth-child(2){
                         // position: fixed;
                         // z-index: 100;
-                        filter: grayscale(70%);
-                        backdrop-filter: blur(20px);
+                        filter: grayscale(70%) opacity(0.5);
                         transform: translate(10px, 100%);
                         // -webkit-transform: translate(-10px, 20px) rotate(-10deg);
 
                         &:hover{
-                            filter: grayscale(0%);
+                            filter: grayscale(0%) opacity(1);
                             // transform: translate(0px, 100%) rotate(0deg);
                             transition: all .2s ease-in-out;
                         }
                     }
                     &:nth-child(3){
                         // position: fixed;
-                        filter: grayscale(70%);
+                        filter: grayscale(70%) opacity(0.2);
                         transform: translate(-25px, 0%);
+                        // transition: all .2s ease-in-out;
 
                         &:hover{
-                            filter: grayscale(0%);
+                            filter: grayscale(0%) opacity(1);
                             // transform: translate(0px, 0%) rotate(0deg);
                             transition: all .2s ease-in-out;
                         }
                     }
                     &:nth-child(4){
                         // position: fixed;
-                        filter: grayscale(70%);
+                        filter: grayscale(70%) opacity(0.4);
                         transform: translate(-50px, 80%) ;
 
                         &:hover{
-                            filter: grayscale(0%);
+                            filter: grayscale(0%) opacity(1);
                             // transform: translate(0px, 80%) rotate(0deg);
                             transition: all .2s ease-in-out;
                             z-index: 1;
@@ -357,11 +358,11 @@
                     }
                     &:nth-child(5){
                         // position: fixed;
-                        filter: grayscale(70%);
+                        filter: grayscale(70%) opacity(0.4);
                         transform: translate(-25px, 10%);
 
                         &:hover{
-                            filter: grayscale(0%);
+                            filter: grayscale(0%) opacity(1);
                             // transform: translate(-30px, 10px) rotate(10deg);
                             transition: all .2s ease-in-out;
                         }
